sg_kafka/main.tf
//
// Module: tf_aws_sg/sg_kafka
//
//



// Security Group Resource for Module
resource "aws_security_group" "main_security_group" {
    name = "${var.security_group_name}"
    description = "Security Group ${var.security_group_name}"
    vpc_id = "${var.vpc_id}"

    // allows traffic from the SG itself for tcp
    ingress {
        from_port = 0
        to_port = 65535
        protocol = "tcp"
        self = true
    }

    // allows traffic from the SG itself for udp
    ingress {
        from_port = 0
        to_port = 65535
        protocol = "udp"
        self = true
    }

    // allow traffic for TCP 22 (SSH)
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["${var.source_cidr_blocks}"]
    }

    // allow traffic for TCP 6667 (Kafka broker 0.8.1.x)
    ingress {
        from_port = 6667
        to_port = 6667
        protocol = "tcp"
        cidr_blocks = ["${var.source_cidr_blocks}"]
    }

    // allow traffic for TCP 9092 (Kafka broker 0.8.2+)
    ingress {
        from_port = 9092
        to_port = 9092
        protocol = "tcp"
        cidr_blocks = ["${var.source_cidr_blocks}"]
    }

}
